# email_newsletter

./: Cargo.toml  README.md  docker-compose.yaml  start.sh
.cargo/: config.toml
.github/workflows/: ci.yml
db/: init.sql
src/: lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
test/: health_check.rs
tests/: health_check.rs
