[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
reqwest = "0.12"
serde = { version = "1.0.210", features = ["derive"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "migrate"]